# netcoredbg

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Directory.Build.props  Dockerfile  LICENSE  README.md  appveyor.yml  cli.md  clrdefinitions.cmake  compileoptions.cmake  detectplatform.cmake  fetchdeps.cmake  getgitrevisiondescription.cmake  getgitrevisiondescription.cmake.in  init.sh  netcoredbg.sln  platformdefinitions.cmake  rpmbuild.cmake  vcsinfo.cmake
.ahub/sam/: exclude.txt
.github/: pull_request_template.md
.github/workflows/: release-ci.yml
doc/: cli.md
doc/guide/: README.md  netcoredbg-guide.tex
docs/: cli.md  interop.md  stepping.md
docs/files/: stepping_callbacks_scheme.drawio  stepping_protocol_scheme.drawio  stepping_sequence_diagram.drawio
docs/guide/: .gitignore  Makefile  README.md
packaging/: SOS-rename.patch  microsoft.codeanalysis.csharp.scripting.2.3.1.nupkg  microsoft.codeanalysis.csharp.scripting.2.8.0.nupkg  microsoft.codeanalysis.scripting.common.2.3.1.nupkg  microsoft.codeanalysis.scripting.common.2.8.0.nupkg  netcoredbg.manifest  netcoredbg.spec  nuget.xml
patches/coreclr/: 0001-Add-more-stuff-to-devel-package-for-debugger.patch  0001-Add-patch-for-breakpoints-on-ARM.patch  0002-Add-patch-for-breakpoints-on-ARM.patch  0002-Enable-Debug-IPC.patch  0003-Add-patch-for-undefined-references-in-SOS.patch  0003-Enable-Debug-IPC.patch  0004-Add-patch-for-undefined-references-in-SOS.patch  0004-Fix-SetDebuggerREGDISPLAYFromREGDISPLAY-function-on-.patch  0005-Fix-SetDebuggerREGDISPLAYFromREGDISPLAY-function-on-.patch
patches/dotnet-launcher/: 0001-Enable-waiting-for-managed-debugger-attach.patch
src/: .doxyfile  CMakeLists.txt  buildinfo.cpp  buildinfo.cpp.in  buildinfo.h  dynlibs.h  filesystem.cpp  filesystem.h  ioredirect.cpp  ioredirect.h  iosystem.h  limits.h  main.cpp  platform.cpp  platform.h  span.h  streams.cpp  streams.h  string_view.h  torelease.h  utility.h  version.h
src/ToolBox/SOS/NETCore/: SymbolReader.cs
src/coreclr/: README.md  arrayholder.h  cor.h  cordebug.h  corhdr.h  no_sal2.h  objidl.h  ole2.h  pal.h  pal_assert.h  pal_char16.h  pal_endian.h  pal_error.h  pal_mstypes.h  palclr.h  poppack.h  pshpack1.h  rpc.h  rpcndr.h  safemath.h  sal.h  specstrings.h  specstrings_strict.h  unknwn.h  winerror.h
src/debug/debugger/: CMakeLists.txt  breakpoints.cpp  commands.cpp  frames.cpp  main.cpp  modules.cpp  platform.cpp  platform.h  symbolreader.cpp  symbolreader.h  torelease.h  tpa.cpp  typeprinter.cpp  typeprinter.h  valueprint.cpp  valuewalk.cpp  varobj.cpp
src/debug/netcoredbg/: CMakeLists.txt  SymbolReader.cs  SymbolReader.csproj  breakpoints.cpp  breakpoints.h  buildinfo.cpp.in  cliprotocol.cpp  cliprotocol.h  commands.cpp  common.h  cputil.cpp  cputil.h  debugger.h  expr.cpp  expr.h  frames.cpp  frames.h  iprotocol.cpp  iprotocol.h  jmc.cpp  logger.cpp  logger.h  main.cpp  manageddebugger.cpp  manageddebugger.h  miprotocol.cpp  miprotocol.h  modules.cpp  modules.h  platform.cpp  platform.h  protocol.cpp  protocol.h  symbolreader.cpp  symbolreader.h  torelease.h  typeprinter.cpp  typeprinter.h  valueprint.cpp  valueprint.h  (+10 more)
src/debugger/: breakpoint_break.cpp  breakpoint_break.h  breakpoint_entry.cpp  breakpoint_entry.h  breakpoint_hotreload.cpp  breakpoint_hotreload.h  breakpoint_interop_rendezvous.cpp  breakpoint_interop_rendezvous.h  breakpoints.cpp  breakpoints.h  breakpoints_exception.cpp  breakpoints_exception.h  breakpoints_func.cpp  breakpoints_func.h  breakpoints_interop.cpp  breakpoints_interop.h  breakpoints_interop_line.cpp  breakpoints_interop_line.h  breakpoints_line.cpp  breakpoints_line.h  breakpointutils.cpp  breakpointutils.h  callbacksqueue.cpp  callbacksqueue.h  dbgshim.h  debugger.h  evalhelpers.cpp  evalhelpers.h  evalstackmachine.cpp  evalstackmachine.h  evaluationpart.h  evaluator.cpp  evaluator.h  evalutils.cpp  evalutils.h  evalwaiter.cpp  evalwaiter.h  exceptionbreakpointstorage.cpp  exceptionbreakpointstorage.h  expr.cpp  (+43 more)
src/interfaces/: idebugger.h  iprotocol.h  types.cpp  types.h
src/managed/: Evaluation.cs  ManagedPart.csproj  StackMachine.cs  SymbolReader.cs  Utils.cs  interop.cpp  interop.h
src/metadata/: async_info.cpp  async_info.h  attributes.cpp  attributes.h  interop_libraries.cpp  interop_libraries.h  jmc.cpp  jmc.h  modules.cpp  modules.h  modules_app_update.cpp  modules_app_update.h  modules_sources.cpp  modules_sources.h  sos_md.h  typeprinter.cpp  typeprinter.h
src/ncdbhook/: ncdbhook.cs  ncdbhook.csproj
src/protocols/: cliprotocol.cpp  cliprotocol.h  completions.h  escaped_string.h  iprotocol.cpp  iprotocol.h  miprotocol.cpp  miprotocol.h  protocol.cpp  protocol.h  protocol_utils.cpp  protocol_utils.h  sourcestorage.cpp  sourcestorage.h  tokenizer.cpp  tokenizer.h  tty.h  vscodeprotocol.cpp  vscodeprotocol.h
src/unittests/: CMakeLists.txt  Catch2.cpp  README.md  compile_test.h  escaped_string_test.cpp  ioredirect_test.cpp  iosystem_test.cpp  span_test.cpp  streams_test.cpp  string_view_test.cpp
src/unix/: dynlibs_unix.cpp  filesystem_unix.cpp  filesystem_unix.h  interop_unix.cpp  iosystem_unix.cpp  iosystem_unix.h  platform_unix.cpp
src/utils/: dynlibs.h  dynlibs_unix.cpp  dynlibs_win32.cpp  err_utils.cpp  escaped_string.cpp  escaped_string.h  filesystem.cpp  filesystem.h  indexed_storage.h  interop_unix.cpp  interop_win32.cpp  ioredirect.cpp  ioredirect.h  iosystem.h  iosystem_unix.cpp  iosystem_win32.cpp  limits.h  literal_string.h  logger.cpp  logger.h  rwlock.h  span.h  streams.cpp  streams.h  string_view.h  torelease.h  utf.cpp  utf.h
src/windows/: dynlibs_win32.cpp  filesystem_win32.cpp  filesystem_win32.h  interop_win32.cpp  iosystem_win32.cpp  iosystem_win32.h  platform_win32.cpp
test-suite/: README.md  llvm-gcov.sh  run_cli_test.sh  run_tests.ps1  run_tests.sh  sdb_run_tests.ps1  sdb_run_tests.sh  sdb_run_tizen_tests.sh  test-suite.sln
test-suite/CLITestBreakpoint/: Program.cs  commands.txt  log_test.txt
test-suite/CLITestInteropBreakpoint/: Program.cs  commands.txt  log_test.txt  program.c
tests/: README.md  run_tests_sdb.sh  tests.sln
(+165 files in other folders)
